--- a/fe-jeopardy/src/app/app.component.html
+++ b/fe-jeopardy/src/app/app.component.html
@@ -3,7 +3,8 @@
 		<h2>Jeopardy!</h2>
 	</div>
 	<div>
-		<ion-icon (click)="modalComponent.showJeopardyInfo(false)" name="information-circle-outline"></ion-icon>
+		<ion-icon (click)="showJeopardyInfo()" name="information-circle-outline"></ion-icon>
+		<ion-icon (click)="showAnalytics()" name="bar-chart-outline"></ion-icon>
 	</div>
 </div>
 
@@ -13,3 +14,4 @@
 </div>
 
 <app-modal></app-modal>
+<app-analytics></app-analytics>
