--- a/fe-jeopardy/src/app/analytics/analytics.component.html
+++ b/fe-jeopardy/src/app/analytics/analytics.component.html
@@ -2,6 +2,12 @@
     <div class='modal-message'>
         <h3>Jeopardy Analytics</h3>
         <p>Games played: {{gamesPlayed}}</p>
+        <p>Average 1st round score: {{firstRoundScore}}</p>
+        <p>Average 2nd round score: {{secondRoundScore}}</p>
+        <p>1st round answer rate: {{firstRoundAnsRate}}%</p>
+        <p>1st round correctness rate: {{firstRoundCorrRate}}%</p>
+        <p>2nd round answer rate: {{secondRoundAnsRate}}%</p>
+        <p>2nd round correctness rate: {{secondRoundCorrRate}}%</p>
     </div>
     <div>
         <button (click)="showAnalytics = false">
