single round option

--- a/fe-jeopardy/src/app/analytics/analytics.component.html
+++ b/fe-jeopardy/src/app/analytics/analytics.component.html
@@ -2,11 +2,11 @@
     <div class='modal-message'>
         <h3>Jeopardy Analytics</h3>
         <p>Games played: {{gamesPlayed}}</p>
-        <p>Average 1<sup>st</sup> round score: {{firstRoundScore}}</p>
-        <p>Average 2<sup>nd</sup> round score: {{secondRoundScore}}</p>
+        <p>Average 1<sup>st</sup> round score: ${{firstRoundScore}}</p>
+        <p>Average 2<sup>nd</sup> round score: ${{secondRoundScore}}</p>
         <p>1<sup>st</sup> round answer rate: {{firstRoundAnsRate}}%</p>
-        <p>1<sup>st</sup> round correctness rate: {{firstRoundCorrRate}}%</p>
         <p>2<sup>nd</sup> round answer rate: {{secondRoundAnsRate}}%</p>
+        <p>1<sup>st</sup> round correctness rate: {{firstRoundCorrRate}}%</p>
         <p>2<sup>nd</sup> round correctness rate: {{secondRoundCorrRate}}%</p>
     </div>
     <div>
