--- a/fe-jeopardy/src/app/join/join.component.html
+++ b/fe-jeopardy/src/app/join/join.component.html
@@ -1,23 +1,27 @@
 <div class='join-container flex-column'>
-    <div id='join-inputs' class='flex-column'>
+    <div class='flex-column gap15'>
         <input type="text" [(ngModel)]="playerName" placeholder="Enter your name">
 
-        <div id='join-buttons' class='flex-row'>
+        <div class='flex-row gap15'>
             <!-- <button (click)="joinPublicGame(playerName)">Join public game</button> -->
             <button (click)="createPrivateGame(playerName, 0)">Start a new game</button>
             <button (click)="toggleGameCodeInput()">Join game by code</button>
         </div>
-        <div class='flex-row'>
+        <div class='flex-row gap15'>
             <div >
-                <input type="checkbox" id="one-round" [(ngModel)]="oneRoundChecked" (change)="twoRoundChecked = !oneRoundChecked">
-                <label for="one-round" style="margin-right: 1em;">1 Round</label>
-                <input type="checkbox" id="two-round" [(ngModel)]="twoRoundChecked" (change)="oneRoundChecked = !twoRoundChecked">
-                <label for="two-round">2 Round</label>
+                <div>
+                    <input type="checkbox" id="one-round" [(ngModel)]="oneRoundChecked" (change)="twoRoundChecked = !oneRoundChecked">
+                    <label for="one-round" style="margin-right: 1em;">1 Round (~10-15 min)</label>
+                </div>
+                <div>
+                    <input type="checkbox" id="two-round" [(ngModel)]="twoRoundChecked" (change)="oneRoundChecked = !twoRoundChecked">
+                    <label for="two-round">2 Round (~20-25 min)</label>
+                </div>
             </div>
-            <div></div>
+            <div>
+                <input id="game-code" *ngIf="showGameCodeInput" (keydown.enter)="joinGameByCode(playerName, gameCode)" type="text" [(ngModel)]="gameCode" placeholder="Game code">
+            </div>
         </div>
-
-        <input *ngIf="showGameCodeInput" (keydown.enter)="joinGameByCode(playerName, gameCode)" type="text" [(ngModel)]="gameCode" placeholder="Game code">
     </div>
 
     <hr>
@@ -31,5 +35,3 @@
     
     <button (click)="rejoin()">Disconnected? Click to rejoin</button>
 </div>
-
-<app-modal></app-modal>
