--- a/fe-jeopardy/src/app/join/join.component.less
+++ b/fe-jeopardy/src/app/join/join.component.less
@@ -1,8 +1,12 @@
 .join-container {
     gap: 30px;
 
-    #join-inputs, #join-buttons {
+    .gap15 {
         gap: 15px;
+    }
+
+    #game-code {
+        width: calc(100% - 20px);
     }
 
     #bots-container {
