--- a/fe-jeopardy/src/app/analytics/analytics.component.html
+++ b/fe-jeopardy/src/app/analytics/analytics.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="showAnalytics" class='modal-container'>
+<div class='modal-container'>
     <div class='modal-message'>
         <h3>Jeopardy Analytics</h3>
         <p>Games played: {{gamesPlayed}}</p>
@@ -10,7 +10,7 @@
         <p>2<sup>nd</sup> round correctness rate: {{secondRoundCorrRate}}%</p>
     </div>
     <div>
-        <button (click)="showAnalytics = false">
+        <button (click)="modal.hideAnalytics()">
             Continue  
         </button>
     </div>
