--- a/fe-jeopardy/src/app/app.component.html
+++ b/fe-jeopardy/src/app/app.component.html
@@ -3,8 +3,11 @@
 		<h2>Jeopardy!</h2>
 	</div>
 	<div>
-		<ion-icon (click)="modal.displayInstructions()" name="information-circle-outline"></ion-icon>
+		<a target="_blank" href='https://docs.google.com/forms/d/e/1FAIpQLSdzHFumIhdsgNksr8lDUO3hHhVwaIqeO9asIhBWsroNfYZW4Q/viewform'>
+			<ion-icon name="pencil-outline"></ion-icon>
+		</a>
 		<ion-icon (click)="modal.displayAnalytics()" name="bar-chart-outline"></ion-icon>
+		<ion-icon (click)="modal.displayInstructions()" name="information-circle-outline"></ion-icon>
 	</div>
 </div>
 
