--- a/fe-jeopardy/src/app/app.component.less
+++ b/fe-jeopardy/src/app/app.component.less
@@ -17,6 +17,10 @@
     background-color: var(--jeopardy-blue);
     color: white;
 
+    a {
+        color: white;
+    }
+
     h2 {
         margin-left: 1em;
     }
