--- a/fe-jeopardy/src/app/instructions/instructions.component.html
+++ b/fe-jeopardy/src/app/instructions/instructions.component.html
@@ -28,7 +28,7 @@
             <p>Wagering: Players have 30 seconds to wager during Double and Final Jeopardy. If no wager is given, the lowest allowed wager will be chosen.</p>
             <p>
                 <b>Note</b>: This game is still in development. If you encounter any issues or have any suggestions, please provide feedback 
-                <a href='https://docs.google.com/forms/d/e/1FAIpQLSdzHFumIhdsgNksr8lDUO3hHhVwaIqeO9asIhBWsroNfYZW4Q/viewform' target='blank'>here</a>.
+                <a target="_blank" href='https://docs.google.com/forms/d/e/1FAIpQLSdzHFumIhdsgNksr8lDUO3hHhVwaIqeO9asIhBWsroNfYZW4Q/viewform'>here</a>.
                 All responses are anonymous.
             </p>
         </div>
