--- a/fe-jeopardy/src/app/game/game.component.html
+++ b/fe-jeopardy/src/app/game/game.component.html
@@ -39,8 +39,7 @@
 		<ion-icon (click)="stopMusic()" *ngIf="playMusic" name="volume-high-outline"></ion-icon>
 		<ion-icon (click)="startMusic()" *ngIf="!playMusic" name="volume-mute-outline"></ion-icon>
 		<div class='control-info' *ngIf="showMusicInfo">
-			<ion-icon name="chevron-up-outline"></ion-icon>
-			<p>Click for Jeopardy music</p>
+			<p><ion-icon name="chevron-back-outline"></ion-icon> Click for Jeopardy music</p>
 		</div>
 		<audio loop #jeopardyAudio>
 			<source src="../../assets/jeopardy_music.mp3" />
@@ -51,8 +50,7 @@
 		<ion-icon (click)="pauseGame(false)" *ngIf="game.IsPaused() && !game.Disconnected()" name="play"></ion-icon>
 		<ion-icon (click)="pauseGame(true)" *ngIf="!game.IsPaused()" name="pause"></ion-icon>
 		<div class='control-info' *ngIf="showPauseGame">
-			<ion-icon name="chevron-up-outline"></ion-icon>
-			<p>Click to pause the game</p>
+			<p><ion-icon name="chevron-back-outline"></ion-icon> Click to pause the game</p>
 		</div>
 	</div>
 </div>
