--- a/fe-jeopardy/src/styles.less
+++ b/fe-jeopardy/src/styles.less
@@ -65,7 +65,7 @@ button:hover {
 }
 
 #question-container {
-    width: calc(var(var(--question-box-width)) + 2*var(--question-box-padding));
+    width: calc(var(--question-box-width) + 2*var(--question-box-padding));
 }
 
 .question-board {
