--- a/fe-jeopardy/src/app/instructions/instructions.component.html
+++ b/fe-jeopardy/src/app/instructions/instructions.component.html
@@ -5,7 +5,7 @@
             <p>
                 This is a multiplayer Jeopardy game.
                 It should be familiar to anyone who has seen it on TV, but there are a few differences to make it playable online. 
-                Please take a moment to carefully ready the instructions below, paying close attention to the <b>bolded</b> sections.
+                Please take a moment to carefully read the instructions below, paying close attention to the <b>bolded</b> sections.
                 If you ever need to refer to these instructions again, you can click the <ion-icon name="information-circle-outline"></ion-icon>
                 icon in the top right corner of the page. 
             </p>
