--- a/fe-jeopardy/src/app/join/join.component.less
+++ b/fe-jeopardy/src/app/join/join.component.less
@@ -15,6 +15,14 @@
             margin-bottom: 0;
         }
     }
+
+    .round-choice {
+        display: inline;
+    }
+
+    #penalty-choice {
+        margin-top: 5px;
+    }
     
     hr {
         margin: 0;
