--- a/fe-jeopardy/src/app/join/join.component.less
+++ b/fe-jeopardy/src/app/join/join.component.less
@@ -23,6 +23,11 @@
     #penalty-choice {
         margin-top: 5px;
     }
+
+    #advanced-options {
+        padding: 1px 5px;
+        margin-top: 5px;
+    }
     
     hr {
         margin: 0;
