--- a/fe-jeopardy/src/app/join/join.component.html
+++ b/fe-jeopardy/src/app/join/join.component.html
@@ -3,30 +3,28 @@
         <input type="text" [(ngModel)]="playerName" placeholder="Enter your name">
 
         <div class='flex-row gap15'>
-            <!-- <button (click)="joinPublicGame(playerName)">Join public game</button> -->
-            <button (click)="createPrivateGame(playerName, 0)">Start a new game</button>
+            <!-- <button (click)="joinPublicGame()">Join public game</button> -->
+            <button (click)="createPrivateGame(0)">Start a new game</button>
             <button (click)="toggleGameCodeInput()">Join game by code</button>
         </div>
         <div class='flex-row gap15'>
-            <div>
-                <div class='round-choice'>
+            <div class='flex-column game-inputs'>
+                <div>
                     <input type="checkbox" id="one-round" [(ngModel)]="oneRoundChecked" (change)="twoRoundChecked = !oneRoundChecked">
                     <label for="one-round" style="margin-right: 1em;">1 Round</label>
-                </div>
-                <div class='round-choice'>
                     <input type="checkbox" id="two-round" [(ngModel)]="twoRoundChecked" (change)="oneRoundChecked = !twoRoundChecked">
                     <label for="two-round">2 Rounds</label>
                 </div>
-                <div id='penalty-choice'>
+                <div>
                     <input type="checkbox" id="penalty-input" [(ngModel)]="penaltyChecked">
                     <label for='penalty-input'>Penaly for incorrect answers</label>
                 </div>
                 <div>
-                    <button id='advanced-options'>+</button><span> Advanced options</span>
+                    <button id='advanced-options' (click)="modal.displayConfig()">+</button><span> Advanced options</span>
                 </div>
             </div>
             <div>
-                <input id="game-code" *ngIf="showGameCodeInput" (keydown.enter)="joinGameByCode(playerName, gameCode)" type="text" [(ngModel)]="gameCode" placeholder="Game code">
+                <input id="game-code" *ngIf="showGameCodeInput" (keydown.enter)="joinGameByCode(gameCode)" type="text" [(ngModel)]="gameCode" placeholder="Game code">
             </div>
         </div>
     </div>
@@ -34,11 +32,75 @@
     <hr>
 
     <div id='bots-container' class='flex-column'>
-        <button (click)="createPrivateGame(playerName, 2)">Play against bots</button>
+        <button (click)="createPrivateGame(2)">Play against bots</button>
         <p>No one to play with right now? Play against the Jeopardy bots.</p>
     </div>
     
     <hr>
     
     <button (click)="rejoin()">Disconnected? Click to rejoin</button>
+</div>
+
+<div id="game-config" class='modal-container' *ngIf="modal.showConfig()">
+    <div class='modal-message'>
+        <h3>Jeopardy Configuration</h3>
+        <div id='config-inputs' class='flex-row'>
+            <div class='flex-column game-inputs'>
+                <input type="text" [(ngModel)]="playerName" placeholder="Enter your name">
+                <div>
+                    <input type="checkbox" id="one-round" [(ngModel)]="oneRoundChecked" (change)="twoRoundChecked = !oneRoundChecked">
+                    <label for="one-round" style="margin-right: 1em;">1 Round</label>
+                    <input type="checkbox" id="two-round" [(ngModel)]="twoRoundChecked" (change)="oneRoundChecked = !twoRoundChecked">
+                    <label for="two-round">2 Rounds</label>
+                </div>
+                <div class='penalty-choice'>
+                    <input type="checkbox" id="penalty-input" [(ngModel)]="penaltyChecked">
+                    <label for='penalty-input'>Penaly for incorrect answers</label>
+                </div>
+                <div>
+                    <input class='number-config' type="number"  [(ngModel)]="botConfig" min="0" max="2" (change)="validateBotConfig()">
+                    <label for="bot-config"> Bots</label>
+                </div>
+                <!----------------------------------------------->
+                <div>
+                    <input class='number-config' type="number"  [(ngModel)]="pickConfig" min="3" max="60" (change)="validatePickConfig()">
+                    <label for="pick-config"> Pick Timeout</label>
+                </div>
+                <div>
+                    <input class='number-config' type="number"  [(ngModel)]="buzzConfig" min="3" max="60" (change)="validateBuzzConfig()">
+                    <label for="buzz-config"> Buzz Timeout</label>
+                </div>
+                <div>
+                    <input class='number-config' type="number"  [(ngModel)]="answerConfig" min="3" max="60" (change)="validateAnswerConfig()">
+                    <label for="answer-config"> Answer Timeout</label>
+                </div>
+                <div>
+                    <input class='number-config' type="number"  [(ngModel)]="voteConfig" min="3" max="60" (change)="validateVoteConfig()">
+                    <label for="vote-config"> Vote Timeout</label>
+                </div>
+                <div>
+                    <input class='number-config' type="number"  [(ngModel)]="wagerConfig" min="3" max="60" (change)="validateWagerConfig()">
+                    <label for="wager-config"> Wager Timeout</label>
+                </div>
+                
+            </div>
+            <div id='question-inputs'>
+                <select id="question-mode" [(ngModel)]="questionMode">
+                    <option value="random">Random</option>
+                    <option value="cyo">Choose your own</option>
+                </select>
+                <div>
+                    <input *ngIf="questionMode == 'cyo'" type="text" placeholder="Search categories">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="config-buttons">
+        <button (click)="createPrivateGame(botConfig)">
+            Start Game  
+        </button>
+        <button (click)="hideConfig()">
+            Exit
+        </button>
+    </div>
 </div>
