--- a/fe-jeopardy/src/app/join/config/config.component.html
+++ b/fe-jeopardy/src/app/join/config/config.component.html
@@ -1,4 +1,4 @@
-<div id="game-config" class='modal-container'>
+<div class='modal-container'>
     <div class='modal-message'>
         <h3>Jeopardy Configuration</h3>
         <div id='config-inputs' class='flex-row'>
@@ -7,50 +7,51 @@
                     <input type="text" [(ngModel)]="playerName" placeholder="Enter your name">
                 </div>
                 <div>
-                    <input type="checkbox" id="one-round" [(ngModel)]="oneRoundChecked" (change)="twoRoundChecked = !oneRoundChecked">
-                    <label for="one-round" style="margin-right: 1em;">1 Round</label>
-                    <input type="checkbox" id="two-round" [(ngModel)]="twoRoundChecked" (change)="oneRoundChecked = !twoRoundChecked">
-                    <label for="two-round">2 Rounds</label>
-                </div>
-                <div class='penalty-choice'>
-                    <input type="checkbox" id="penalty-input" [(ngModel)]="penaltyChecked">
-                    <label for='penalty-input'>Penalty for incorrect answers</label>
+                    <input type="checkbox" id="one-round-config" [(ngModel)]="oneRoundChecked" (change)="twoRoundChecked = !oneRoundChecked">
+                    <label for="one-round-config" style="margin-right: 1em;">1 Round</label>
+                    <input type="checkbox" id="two-round-config" [(ngModel)]="twoRoundChecked" (change)="oneRoundChecked = !twoRoundChecked">
+                    <label for="two-round-config">2 Rounds</label>
                 </div>
                 <div>
-                    <input class='number-config' type="number"  [(ngModel)]="botConfig" min="0" max="2" (change)="validateBotConfig()">
+                    <input type="checkbox" id="penalty-input-config" [(ngModel)]="penaltyChecked">
+                    <label for='penalty-input-config'>Penalty for incorrect answers</label>
+                </div>
+                <div>
+                    <input id='bot-config' type="number"  [(ngModel)]="botConfig" min="0" max="2" (change)="validateBotConfig()">
                     <label for="bot-config"> Bots</label>
                 </div>
                 <div>
-                    <input class='number-config' type="number"  [(ngModel)]="pickConfig" min="3" max="60" (change)="validatePickConfig()">
+                    <input id='pick-config' type="number"  [(ngModel)]="pickConfig" min="3" max="60" (change)="validatePickConfig()">
                     <label for="pick-config"> Pick Timeout</label>
                 </div>
                 <div>
-                    <input class='number-config' type="number"  [(ngModel)]="buzzConfig" min="3" max="60" (change)="validateBuzzConfig()">
+                    <input id='buzz-config' type="number"  [(ngModel)]="buzzConfig" min="3" max="60" (change)="validateBuzzConfig()">
                     <label for="buzz-config"> Buzz Timeout</label>
                 </div>
                 <div>
-                    <input class='number-config' type="number"  [(ngModel)]="answerConfig" min="3" max="60" (change)="validateAnswerConfig()">
+                    <input id='answer-config' type="number"  [(ngModel)]="answerConfig" min="3" max="60" (change)="validateAnswerConfig()">
                     <label for="answer-config"> Answer Timeout</label>
                 </div>
                 <div>
-                    <input class='number-config' type="number"  [(ngModel)]="voteConfig" min="3" max="60" (change)="validateVoteConfig()">
+                    <input id='vote-config' type="number"  [(ngModel)]="voteConfig" min="3" max="60" (change)="validateVoteConfig()">
                     <label for="vote-config"> Vote Timeout</label>
                 </div>
                 <div>
-                    <input class='number-config' type="number"  [(ngModel)]="wagerConfig" min="3" max="60" (change)="validateWagerConfig()">
+                    <input id='wager-config' type="number"  [(ngModel)]="wagerConfig" min="3" max="60" (change)="validateWagerConfig()">
                     <label for="wager-config"> Wager Timeout</label>
                 </div>
             </div>
-
             <div id='question-inputs'>
-                <select id="question-mode" [(ngModel)]="questionMode">
-                    <option value="random">Random Questions</option>
-                    <option value="cyo">Choose your own</option>
-                </select>
+                <div>
+                    <select [(ngModel)]="questionMode">
+                        <option value="random">Random Questions</option>
+                        <option value="cyo">Choose your own</option>
+                    </select>
+                </div>
                 <div *ngIf="questionMode == 'cyo'">
                     <div id='search-container'>
                         <input type="text" placeholder="Search categories" [(ngModel)]="categorySearch" (input)="searchCategories()" (click)="searchCategories()">
-                        <div class="loader" *ngIf="searchLoader"></div>
+                        <div id="loader" *ngIf="searchLoader"></div>
                         <div id='results-dropdown'>
                             <div class='search-result' *ngFor="let result of searchResults" (click)="addCategory(result)">
                                 {{result.category}} {{twoRoundChecked ? '(' + result.round + ')' : ''}}
@@ -85,7 +86,7 @@
             </div>
         </div>
     </div>
-    <div id="config-buttons">
+    <div id="config-buttons" class='flex-row'>
         <button (click)="createPrivateGame(botConfig)">
             Start Game  
         </button>
