--- a/fe-jeopardy/src/app/join/config/config.component.less
+++ b/fe-jeopardy/src/app/join/config/config.component.less
@@ -1,125 +1,108 @@
-#game-config {
-    #config-inputs {
-        input {
-            padding: 5px;
+#config-inputs {
+    input {
+        padding: 5px;
+    }
+
+    .game-inputs {
+        div {
+            margin-bottom: 10px;
         }
 
-        .game-inputs {
-            gap: 5px; 
-
-            div {
-                margin-bottom: 10px;
-            }
-
-            input[type="text"] {
-                width: 85%;
-            }
-
-            #number-config {
-                width: 2.25em;
-                height: 0.5em;
-            }
+        input[type="text"] {
+            width: 85%;
         }
 
-        #question-inputs {
-            * {
-                margin-bottom: 10px;
-            }
-            
-            select {
-                width: 100%;
-                height: 2em;
-            }
+        input[type="number"] {
+            width: 3em;;
+        }
+    }
+
+    #question-inputs {
+        div {
+            margin-bottom: 10px;
+        }
+        
+        select {
+            width: 100%;
+            height: 2em;
+        }
+
+        #search-container {
+            position: relative;
+            width: 100%; 
 
             input {
-                height: 1em;
+                width: calc(100% - 12px);
+                margin: 0;
             }
 
-            #search-container {
-                position: relative;
-                width: 100%; 
-
-                input {
-                    width: calc(100% - 12px);
-                    margin: 0;
-                }
-
-                .loader {
-                    border: 4px solid lightgrey;
-                    border-top: 4px solid var(--jeopardy-blue);
-                    border-radius: 50%;
-                    width: 0.75em;
-                    height: 0.75em;
-                    animation: spin 2s linear infinite;
-                    position: absolute;
-                    right: 10px;
-                    top: 3px;
-                    transform: translateY(-50%);
-                }
-                
-                @keyframes spin {
-                    0% { transform: rotate(0deg); }
-                    100% { transform: rotate(360deg); }
-                }
-
-                #results-dropdown {
-                    background-color: white; 
-                    z-index: 1;
-                    position: absolute;
-                    width: 100%;
-                    max-height: 15em;
-                    overflow-y: auto;
-    
-                    .search-result {
-                        border: 1px solid black;
-                        border-top: none;
-                        border-right: none;
-                        margin: 0;
-                        padding: 3px;
-                    }
-
-                    .search-result:hover {
-                        background-color: lightgrey;
-                    }
-                }
+            #loader {
+                border: 4px solid lightgrey;
+                border-top: 4px solid var(--jeopardy-blue);
+                border-radius: 50%;
+                width: 0.75em;
+                height: 0.75em;
+                animation: spin 2s linear infinite;
+                position: absolute;
+                right: 10px;
+                top: 3px;
+                transform: translateY(-50%);
             }
             
-            #question-lists {
-                p {
+            @keyframes spin {
+                0% { transform: rotate(0deg); }
+                100% { transform: rotate(360deg); }
+            }
+
+            #results-dropdown {
+                background-color: white; 
+                z-index: 1;
+                position: absolute;
+                width: 100%;
+                max-height: 15em;
+                overflow-y: auto;
+
+                .search-result {
+                    border: 1px solid black;
+                    border-top: none;
+                    border-right: none;
                     margin: 0;
+                    padding: 3px;
                 }
 
-                ol, ul {
-                    margin: 0;
-                    
-                    li {
-                        margin: 3px 0;
-                    }
-                }
-
-                .remove-category {
-                    font-size: 0.9em;
-                }
-
-                .remove-category:hover {
-                    color: red;
-                    cursor: pointer;
-                    font-weight: bolder;
+                .search-result:hover {
+                    background-color: lightgrey;
                 }
             }
         }
-    }
+        
+        #question-lists {
+            p {
+                margin: 0;
+            }
 
-    #config-buttons {
-        margin-top: 10px;
-        text-align: center;
+            ol, ul {
+                margin: 0;
+                
+                li {
+                    margin: 3px 0;
+                }
+            }
 
-        button {
-            padding: 5px 10px;
+            .remove-category {
+                font-size: 0.9em;
+            }
+
+            .remove-category:hover {
+                color: red;
+                cursor: pointer;
+                font-weight: bolder;
+            }
         }
-
-        button:first-child {
-            margin-right: 15px;
-        }
     }
+}
+
+#config-buttons {
+    margin-top: 10px;
+    gap: 15px; 
 }
