--- a/fe-jeopardy/src/app/join/config/config.component.html
+++ b/fe-jeopardy/src/app/join/config/config.component.html
@@ -63,10 +63,7 @@
                             <p>First Round</p>
                             <ol>
                                 <li *ngFor='let category of firstRoundCategories'>
-                                    {{category.category}}
-                                    <span class='remove-category' (click)="removeCategory(category)">
-                                        &nbsp;✕
-                                    </span>
+                                    {{category.category}}<span class='remove-category' (click)="removeCategory(category)">&nbsp;✕</span>
                                 </li>
                             </ol>
                         </div>
@@ -74,10 +71,7 @@
                             <p>Second Round</p>
                             <ol>
                                 <li *ngFor='let category of secondRoundCategories'>
-                                    {{category.category}}
-                                    <span class='remove-category' (click)="removeCategory(category)">
-                                        &nbsp;✕
-                                    </span>
+                                    {{category.category}}<span class='remove-category' (click)="removeCategory(category)">&nbsp;✕</span>
                                 </li>
                             </ol>
                         </div>
@@ -87,11 +81,7 @@
         </div>
     </div>
     <div id="config-buttons" class='flex-row'>
-        <button (click)="createPrivateGame(botConfig)">
-            Start Game  
-        </button>
-        <button (click)="hideConfig()">
-            Exit
-        </button>
+        <button (click)="createPrivateGame(botConfig)">Start Game</button>
+        <button (click)="hideConfig()">Exit</button>
     </div>
 </div>
