--- a/fe-jeopardy/src/app/join/config/config.component.less
+++ b/fe-jeopardy/src/app/join/config/config.component.less
@@ -3,11 +3,11 @@
         padding: 5px;
     }
 
-    .game-inputs {
-        div {
-            margin-bottom: 10px;
-        }
+    div {
+        margin-bottom: 10px;
+    }
 
+    .game-inputs {
         input[type="text"] {
             width: 85%;
         }
@@ -18,10 +18,6 @@
     }
 
     #question-inputs {
-        div {
-            margin-bottom: 10px;
-        }
-        
         select {
             width: 100%;
             height: 2em;
@@ -34,24 +30,6 @@
             input {
                 width: calc(100% - 12px);
                 margin: 0;
-            }
-
-            #loader {
-                border: 4px solid lightgrey;
-                border-top: 4px solid var(--jeopardy-blue);
-                border-radius: 50%;
-                width: 0.75em;
-                height: 0.75em;
-                animation: spin 2s linear infinite;
-                position: absolute;
-                right: 10px;
-                top: 3px;
-                transform: translateY(-50%);
-            }
-            
-            @keyframes spin {
-                0% { transform: rotate(0deg); }
-                100% { transform: rotate(360deg); }
             }
 
             #results-dropdown {
@@ -74,19 +52,33 @@
                     background-color: lightgrey;
                 }
             }
+
+            @keyframes spin {
+                0% { transform: rotate(0deg); }
+                100% { transform: rotate(360deg); }
+            }
+
+            #loader {
+                border: 4px solid lightgrey;
+                border-top: 4px solid var(--jeopardy-blue);
+                border-radius: 50%;
+                width: 0.75em;
+                height: 0.75em;
+                animation: spin 2s linear infinite;
+                position: absolute;
+                right: 10px;
+                top: 3px;
+                transform: translateY(-50%);
+            }
         }
         
         #question-lists {
-            p {
+            p, ol {
                 margin: 0;
             }
 
-            ol, ul {
-                margin: 0;
-                
-                li {
-                    margin: 3px 0;
-                }
+            li {
+                margin: 3px 0;
             }
 
             .remove-category {
@@ -103,6 +95,5 @@
 }
 
 #config-buttons {
-    margin-top: 10px;
     gap: 15px; 
 }
