--- a/fe-jeopardy/src/app/join/join.component.less
+++ b/fe-jeopardy/src/app/join/join.component.less
@@ -5,6 +5,14 @@
         gap: 15px;
     }
 
+    .game-inputs {
+        gap: 5px;
+
+        #advanced-options {
+            padding: 1px 5px;
+        }
+    }
+
     #game-code {
         width: calc(100% - 20px);
     }
@@ -16,13 +24,6 @@
         }
     }
 
-    .round-choice {
-        display: inline;
-    }
-
-    #penalty-choice {
-        margin-top: 5px;
-    }
     
     hr {
         margin: 0;
