--- a/fe-jeopardy/src/app/join/config/config.component.less
+++ b/fe-jeopardy/src/app/join/config/config.component.less
@@ -15,6 +15,10 @@
         input[type="number"] {
             width: 3em;;
         }
+
+        #player-name-config {
+            border: 1px solid grey;
+        }
     }
 
     #question-inputs {
