allow more than three players

--- a/fe-jeopardy/src/app/game/pre-game/pre-game.component.html
+++ b/fe-jeopardy/src/app/game/pre-game/pre-game.component.html
@@ -7,11 +7,12 @@
     </p>
 
     <div>
-        <p>
-            Other players taking too long? Add a Jeopardy bot to the game to play against.
-        </p>
+        <button id='start-game' (click)="startGame()">
+            Start game
+        </button>
         <button (click)="addBot()">
             Add bot
         </button>
+        <p> Other players taking too long? Add a Jeopardy bot to the game to play against.</p>
     </div>
 </div>
