--- a/fe-jeopardy/src/app/game/pre-game/pre-game.component.html
+++ b/fe-jeopardy/src/app/game/pre-game/pre-game.component.html
@@ -1,5 +1,5 @@
 <div id='pre-game-container'>
-    <h2>Waiting for more players</h2>
+    <h2>Waiting to start</h2>
 
     <p>
         Link to join: <span id='joinLink' (click)="openJoinLink()">{{gameLink}}/join/{{game.Name()}}</span>&nbsp;
