--- a/fe-jeopardy/src/app/game/pre-game/pre-game.component.html
+++ b/fe-jeopardy/src/app/game/pre-game/pre-game.component.html
@@ -7,12 +7,8 @@
     </p>
 
     <div>
-        <button id='start-game' (click)="startGame()">
-            Start game
-        </button>
-        <button (click)="addBot()">
-            Add bot
-        </button>
-        <p> Other players taking too long? Add a Jeopardy bot to the game to play against.</p>
+        <button id='start-game' (click)="startGame()">Start game</button>
+        <button (click)="addBot()">Add bot</button>
+        <p>Other players taking too long? Add a Jeopardy bot to the game to play against.</p>
     </div>
 </div>
