--- a/fe-jeopardy/src/app/game/recv-buzz/recv-buzz.component.less
+++ b/fe-jeopardy/src/app/game/recv-buzz/recv-buzz.component.less
@@ -1,9 +1,14 @@
-#buzz-buttons {
-    margin-top: 15px;
-    gap: 30px;
+#buzz-info {
+    margin-top: 1em;
+    gap: 1em;
 
-    button {
-        padding: 20px 0;
+    #buzz-buttons {
+        gap: 30px;
+    
+        button {
+            padding: 20px 0;
+        }
     }
 }
+
 
