--- a/fe-jeopardy/src/app/game/recv-pick/recv-pick.component.less
+++ b/fe-jeopardy/src/app/game/recv-pick/recv-pick.component.less
@@ -1,4 +1,7 @@
-#dispute-button {
-    margin-left: 1em;
-    padding: 5px;
+#prev-question-info {
+    margin: 1em 0;
+
+    p {
+        margin: 0;
+    }
 }
