--- a/fe-jeopardy/src/app/answers/answers.component.less
+++ b/fe-jeopardy/src/app/answers/answers.component.less
@@ -3,10 +3,10 @@ ul {
 
     li {
         margin-bottom: 0.5em;
-    }
 
-    #dispute-button {
-        margin-left: 1em;
-        padding: 3px;
+        .dispute-button {
+            margin-left: 1em;
+            padding: 3px;
+        }
     }
 }
